# tracker_servo

./: README.md  config.yaml  pyproject.toml
design/: DESIGN.md
models/: mixformerv2.onnx
script/: main.py
src/cam/: camera.py
src/detector/: detector.py  mix_backend.py  yolo_backend.py
src/kie_serial/: serial.py
src/tracker/: geometry.py  kalman.py  tracker.py
src/ui/: display.py
